@@ -81,8 +81,8 @@
 */
 
 #if !defined(__DOXYGEN__)
-static inline void _delay_us(double __us) __attribute__((always_inline));
-static inline void _delay_ms(double __ms) __attribute__((always_inline));
+static __inline__ void _delay_us(double __us) __attribute__((__always_inline__));
+static __inline__ void _delay_ms(double __ms) __attribute__((__always_inline__));
 #endif
 
 #ifndef F_CPU
